Stop checking tab overflow once overflow is hit

--- a/framework/components/ATabs/ATabs.scss
+++ b/framework/components/ATabs/ATabs.scss
@@ -19,6 +19,7 @@ $tab-heading-margin: 0;
   background-color: transparent;
   display: flex;
   align-items: center;
+  overflow: hidden;
 
   //Remove link style from tabs
   a {
